fix: footer menu component alignment not working [fixes #758]

--- a/header-footer-grid/assets/scss/frontend/layout/_alignments.scss
+++ b/header-footer-grid/assets/scss/frontend/layout/_alignments.scss
@@ -8,7 +8,7 @@ $component-alignments: (
   .hfg-item-#{$alignment} {
     text-align: #{$alignment};
 
-    #secondary-menu, .nv-nav-wrap, .component-wrap, .site-logo, .nv-search-icon-component .nv-search {
+    #secondary-menu, .nv-nav-wrap, .component-wrap, .site-logo, .nv-search-icon-component .nv-search, .builder-item--footer-menu {
       justify-content: $flex-setting;
     }
   }
